WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-08-05

Version 0.2.0 (under dev!):
   * fixed DCC restore after /upgrade (now order is saved)
   * fixed away after server disconnection (now away is set again when
     reconnecting) (bug #16359)
   * fixed DCC file connection problem (connection from receiver to sender)
   * improved DCC speed (up to x5 on LAN) by forking for DCC files and a
     new option "dcc_fast_send" (does not wait for ACK) (task #5758)
   * fixed crash when purging DCC with high number of DCC (> window size)
   * fixed completion for command handlers (now empty completion_template
     means nick completion, "-" string means no completion at all)
   * fixed nick alignment problem when look_nickmode is off
   * added generic function for incoming numeric IRC commands (bug #16611)
   * fixed crash when doing "/part something" on a server buffer (bug #17201)
   * charsets are now checked when set by /charset command
   * added "look_save_on_exit" option (patch from Emanuele Giaquinta)
   * fixed crash on DCC buffer under Darwin 8 (bug #17115)
   * added configure option for doc XSL prefix (bug #16991)
   * fixed bug with spaces in script names (bug #16957)
   * fixed random crash when "MODE #chan -l" is received
   * fixed bug in IRC parser (random crash with malformed IRC messages)
   * fixed refresh bugs when terminal is resized: too many refreshs,
     display bug with splited windows
   * case ignored for channel names in charset options (bug #16858)
   * fixed crash when setting look_one_server_buffer to ON (bug #16932)
   * added new functions in plugin/script API: get window info,
     get buffer info, get buffer content
   * added polish, russian and czech quickstart guide
   * fixed display bug with special char (bug #16732)
   * added color encoding for some commands like /me
   * renamed plugins names (removed "lib" prefix in name)